fix: overflow

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,6 +13,10 @@
   }
 }
 
+body {
+  overflow-x: hidden !important;
+}
+
 .card {
   padding: 2em;
 }
